// pattern-observer/Observer.java
public interface Observer {
    void update(String mensagem);
}